--- a/t77lehed/templates/template/gallery.html
+++ b/t77lehed/templates/template/gallery.html
@@ -10,5 +10,11 @@
   {{ form.as_p }}
   <button type="submit">Upload</button>
 </form>
+
+{{pilt}}
+{{ BASIC_DIR }}
+{{pilt.img}}
+<img src="/{{ BASIC_DIR }}/{{pilt.img}}" width="120"/>
+
 </body>
 </html>
