--- a/t77lehed/templates/template/gallery.html
+++ b/t77lehed/templates/template/gallery.html
@@ -11,10 +11,13 @@
   <button type="submit">Upload</button>
 </form>
 
-{{pilt}}
-{{ BASIC_DIR }}
-{{pilt.img}}
+{{pilt}}</P>
+{{ BASIC_DIR }}</P>
+{{pilt.img}}</P>
+{{ BASIC_DIR }}/{{pilt.img}}</P>EXC
 <img src="/{{ BASIC_DIR }}/{{pilt.img}}" width="120"/>
 
 </body>
 </html>
+
+  
