--- a/homepage/templates/homepage/main.html
+++ b/homepage/templates/homepage/main.html
@@ -7,4 +7,8 @@
   <h1>Somelugu</h1>
   <p class="lead">Parim koht ajaloo õppimiseks</p>
 </div>
+<div class="about-section">
+  <h2>Meist</h2>
+  <p>See on parim koht kus ajalugu õppida ja harjutada Some vastamiseks</p>
+</div>
 {% endblock %}
