--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -4,8 +4,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-   <!--v= tuleb iga kord updateda kui on muutused style.css--> <link rel="stylesheet" type="text/css" href="{% static 'homepage/style.css' %}?v=10">
+    <title>{% block title %}Somelugu{% endblock %}</title>
+   <!--v= tuleb iga kord updateda kui on muutused style.css--> <link rel="stylesheet" type="text/css" href="{% static 'homepage/style.css' %}?v=13">
   </head>
   <body>
     <header>
