--- a/homepage/templates/homepage/realica.html
+++ b/homepage/templates/homepage/realica.html
@@ -3,8 +3,10 @@
 {% block title %}Realica{% endblock %}
 
 {% block content %}
-<h1>Realica</h1>
-<p>Tähtis tekst.</p>
+<div class= "normal-text">
+    <h1>Realica</h1>
+    <p>Tähtis tekst.</p>
+</div>
 {%endblock%}
 
 
