--- a/homepage/templates/homepage/realica.html
+++ b/homepage/templates/homepage/realica.html
@@ -3,10 +3,13 @@
 {% block title %}Realica{% endblock %}
 
 {% block content %}
+
 <div class= "normal-text">
     <h1>Realica</h1>
     <p>Tähtis tekst.</p>
+    {{sisu}}
 </div>
+
 {%endblock%}
 
 
