--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -14,9 +14,11 @@
           <ul>
             <li><a href="https://www.ekool.eu/#/">Ekool</a></li>
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'realica' %}" class="realica-link">Realica</a>
+            <li><a href="{% url 'vaatamine' %}" class="realica-link">Realica</a>
               <ul class="realica-dropdown">
-                <li><a href="{% url 'realica' %}">Sissejuhatus</a></li>
+                {% for leht in lehed%}
+                <li><a href="{% url 'vaatamine' %}">{{leht}}</a></li>
+                {%endfor%}
                 
               </ul>
             </li>
@@ -25,6 +27,7 @@
       </nav>
     </header>
     <div class="content">
+
       {% block content %}{% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
