--- a/homepage/templates/homepage/exam.html
+++ b/homepage/templates/homepage/exam.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,5 +23,11 @@
         
         <button type="submit">Lõpetan Testi</button>
     </form>
+
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
 </body>
 </html>
