--- a/homepage/templates/homepage/vaata.html
+++ b/homepage/templates/homepage/vaata.html
@@ -1,4 +1,11 @@
-<div>
-  {{ html_content }}
-</div>
+{% extends 'homepage/base.html' %}
+
+{% block content %}
+  <div class="about-section">
+    <h1>{{ tekst.title }}</h1>
+    <div class="normal-text">
+      {{ html_content|safe }}
+    </div>
+  </div>
+{% endblock %}
 
