--- a/homepage/templates/homepage/vaata.html
+++ b/homepage/templates/homepage/vaata.html
@@ -9,3 +9,4 @@
   </div>
 {% endblock %}
 
+<!--markdowni file tekst mis on muudetud html kujule läheb {{ html_content|safe }}. Nii ei pea me iga teema jaoks eraldi template tegema-->
