--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -36,6 +36,7 @@
 
               </ul>
             </li>
+            <li><a href="{% url 'quiz' %}">Test</a></li>
           </ul>
         </div>
       </nav>
