partel lisas add

--- a/homepage/templates/homepage/main.html
+++ b/homepage/templates/homepage/main.html
@@ -6,10 +6,16 @@
 <div class="jumbotron">
   <h1>Somelugu</h1>
   <p class="lead">Parim koht ajaloo õppimiseks</p>
+
 </div>
 <div class="about-section">
   <h2>Meist</h2>
   <p>See on parim koht kus ajalugu õppida ja harjutada Some vastamiseks</p>
+  <p></p>
+  <p>Kui hakkama ei saa vajuta pildile ↓↓↓</p>
+  <a href="https://cv.ee/et/vacancy/999791/maxima-eesti-ou/saaliteenindaja-tartu-maximas-kalda-tee-15">
+    <img src="{% static 'images/maxima.jpeg' %}" alt="My Image">
+  </a>
 </div>
 {% endblock %}
  <!--Lihtsalt main page-->
