--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -37,6 +37,43 @@
               </ul>
             </li>
             <li><a href="{% url 'quiz' %}">Test</a></li>
+            <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Väsinud?</a>
+              <ul class="realica-dropdown">
+              
+                <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Tahad pausi?</a>
+                  <ul class="realica-dropdown">
+                  
+                    <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Lõpetad õppimise?</a>
+                      <ul class="realica-dropdown">
+                      
+                        <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Kukud ajaloo läbi?</a>
+                          <ul class="realica-dropdown">
+                          
+                            <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Lähed maximasse tööle?</a>
+                              <ul class="realica-dropdown">
+                              
+                                <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Kaotasid lootuse?</a>
+                                  <ul class="realica-dropdown">
+                                  
+                                    <li><a href="{% url 'vaatamine' title='Reaali Poisi lugu' %}" class="realica-link">Mängi siis</a>
+                                      <ul class="realica-dropdown">
+                                      
+                                        <li><a href="{% url 'dino'  %}">Dino</a></li>
+
+                                      </li>
+
+                                  </li>
+
+                              </li>
+
+                          </li>
+                      
+                      </li>
+
+                  </li>
+
+              </li>
+              
           </ul>
         </div>
       </nav>
